// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grommet announces 1`] = `
<div
  class="StyledGrommet-gGRXwz hSKpsq"
>
  <div>
    hi
  </div>
</div>
`;

exports[`Grommet announces 2`] = `
<div
  aria-live="assertive"
  style="left: -100%; right: 100%; position: fixed; z-index: -1;"
>
  hello
</div>
`;

exports[`Grommet announces 3`] = `
<div
  aria-live="assertive"
  style="left: -100%; right: 100%; position: fixed; z-index: -1;"
/>
`;

exports[`Grommet full renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  width: 100vw;
  height: 100vh;
}

<div
  className="c0"
>
  Grommet App
</div>
`;

exports[`Grommet hpe theme renders 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  className="c0"
>
  Grommet App
</div>
`;

exports[`Grommet renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  className="c0"
/>
`;
